bug fix - cannot show image behind of pageTitle

--- a/src/app/dashboard/register-partner-offer/register-partner-offer.component.scss
+++ b/src/app/dashboard/register-partner-offer/register-partner-offer.component.scss
@@ -11,7 +11,7 @@ h3{
     margin-left: -15px;
     margin-right: -15px;
     padding: 35px 15px;
-    background-image: url('/assets/img/register-partner-2.jpg');
+    background-image: url('/assets/img/register-questionnaire-offer.jpg');
     background-position: center;
   
     color: white;
