--- a/src/app/dashboard/register-partner-service/register-partner-service.component.scss
+++ b/src/app/dashboard/register-partner-service/register-partner-service.component.scss
@@ -11,7 +11,7 @@ h3{
     margin-left: -15px;
     margin-right: -15px;
     padding: 35px 15px;
-    background-image: url('/assets/img/register-partner-1.jpg');
+    background-image: url('/assets/img/register-questionnaire-service.jpg');
     background-position: center;
   
     color: white;
